Bug 1047303 - use nsITimer to dispatch click and contextmenu event. r=bent, a=2.0+